--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.22.0",
     "bootstrap": "5.1.1",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.3.3",
     "mobx-react": "^7.2.0",
     "react": "^16.13.1",
@@ -19,7 +20,7 @@
     "react-slugify": "^2.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
